# dreaming-of-a-jet-plane

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  detailed_test_output.txt  main.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  s3-lifecycle-policy.json  setup-s3-cache.md  test_output.txt
.claude/: settings.json
app/: aircraft.json  aircraft_database.py  airline_database.py  airlines.json  airport_database.py  airports.json  analytics.py  cities.json  cities_database.py  countries.json  flight_text.py  flight_text_seasonal.py  free_pool.py  intro.py  location_utils.py  main.py  overandout.py  s3_cache.py  scanning.py  scanning_again.py  test_gemini_tts.py  test_live_aircraft.py  voice_test.py  website_home.py
app/aircraft_providers/: __init__.py  airlabs.py  fr24.py
app/tts_providers/: __init__.py  elevenlabs.py  google.py  inworld.py  polly.py
assets/yoto-playlists/: dreaming-of-a-jet-plane-free.json  dreaming-of-a-jet-plane.json  dreaming-of-a-test-plane.json
tests/: __init__.py  conftest.py  test_aircraft_selection.py  test_duplicate_destinations.py  test_end_to_end.py  test_endpoints.py  test_text_generation.py
yoto-playlist/: yoto-playlist.json
